--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
   <title>システムメンテナンスのお知らせ</title>
 </head>
 
 <body>
-  <div style='width: 640px; margin: 50px auto;'>
+  <div style='width: 640px; max-width: 100%; margin: 50px auto;'>
     <div style='border: 1px solid #ccc; padding: 30px; margin-top: 30px;'>
       <h2 style="color: #333">システムメンテナンスのお知らせ</h2>
       <p style="color: #333">
