--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2 style="color: #333">システムメンテナンスのお知らせ</h2>
       <p style="color: #333">
         いつも公共Rデータベースをご利用いただき、ありがとうございます。<br />
-        サーバー移転のため、9月1日（火） 正午から数時間～最大１日間程度ご利用ができません。<br />
+        サーバー移転のため、9月8日（火） 18 時から数時間～最大１日間程度ご利用ができません。<br />
         ご不便をおかけしますが、ご了承いただけますようよろしくお願い申し上げます。
       </p>
     </div>
